adding some css for footer

--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -70,3 +70,13 @@ animation: rotating 2s linear infinite;
 background-color: snow;
 box-shadow: 10px 13px 15px 10px maroon
 }
+
+footer {
+    footer {
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 2.5rem;
+    }
+}
