--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -1,3 +1,51 @@
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    background-color: lightgrey;
+}
+
+header h1 {
+    padding: 1.5rem;
+    font-size: 24px;
+}
+
+header ul {
+    list-style-type: none;
+    display: flex;
+}
+
+header ul * {
+    padding: .50rem;
+}
+
+header ul *:last-child {
+    padding-right: 0;
+    margin-right: 1rem;
+}
+
+header ul li a {
+    text-decoration: none;
+}
+
+header ul li a:visited {
+    color: black;
+}
+
+header ul li a:active {
+    color: #a8a8a8;
+}
+
+header img {
+    padding: 1rem;
+    transition: transform 2s ease;
+}
+
+header img:hover{
+    transform: rotate(360deg);
+}
+
 body {
     background-color: #8f2a2a;
     color: #ffffff;
