--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -51,11 +51,10 @@ body {
     background-color: #8f2a2a;
     color: #ffffff;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   }
+}
 h1 {
 text-align: center;
 font-size: 9em;
-
 }
 p {
 text-align: center;
@@ -122,7 +121,7 @@ box-shadow: 10px 13px 15px 10px maroon
 
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
