--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -121,7 +121,7 @@ box-shadow: 10px 13px 15px 10px maroon
 
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
