--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -59,15 +59,16 @@ font-size: 9em;
 p {
 text-align: center;
 }
-div {
+#mainContent {
 padding-top: 75px;
-/* border: 5px solid whitesmoke; */
+padding-bottom: 75px;
+border: 1px solid whitesmoke;
 background-color: #484848;
 width: 100%;
-height: 1100px;
+height: 1450px;
 text-align: center;
 }
-div:hover{
+#mainContent:hover{
 background-color: #303030;
 }
 img {
@@ -75,7 +76,7 @@ width: 450px;
 height: 550px;
 border-radius: 80em 80em 80em 80em;
 border: 2px solid whitesmoke;
-box-shadow: 10px 13px 15px 10px whitesmoke
+box-shadow: 0px 0px 5px 5px whitesmoke
 }
 
 
