--- a/Projects/SampleProject/css/style.css
+++ b/Projects/SampleProject/css/style.css
@@ -65,7 +65,7 @@ padding-bottom: 75px;
 border: 1px solid whitesmoke;
 background-color: #484848;
 width: 100%;
-height: 1450px;
+height: 100%;
 text-align: center;
 }
 #mainContent:hover{
@@ -122,8 +122,6 @@ box-shadow: 0px 0px 5px 5px maroon
 
 
 footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 2.5rem;
 }
