--- a/Projects/SampleProject/pages/contact/contact.css
+++ b/Projects/SampleProject/pages/contact/contact.css
@@ -3,15 +3,16 @@ header {
     justify-content: space-around;
     align-items: center;
     flex-wrap: nowrap;
-    background-color: lightgrey;
+    background-color: rgb(137, 0, 0);
 }
-
+header:hover {
+    background-color: rgb(94, 10, 10);
+}
 header h1 {
     padding: 1.5rem;
     font-size: 24px;
     color: black;
 }
-
 header ul {
     list-style-type: none;
     display: flex;
@@ -28,29 +29,13 @@ header ul *:last-child {
 
 header ul li a {
     text-decoration: none;
-}
-
-header ul li a:visited {
     color: black;
 }
 
-header ul li a:active {
-    color: #a8a8a8;
-}
-
-header img {
-    padding: 1rem;
-    transition: transform 2s ease;
-}
-
-header img:hover{
-    transform: rotate(360deg);
-}
-
 body {
-    background-color: #8f2a2a;
+    background-color: #560088;
     color: #ffffff;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 h1 {
 text-align: center;
@@ -63,20 +48,19 @@ text-align: center;
 padding-top: 75px;
 padding-bottom: 75px;
 border: 1px solid whitesmoke;
-background-color: #484848;
+background-color: #030060;
 width: 100%;
 height: 100%;
 text-align: center;
 }
 #mainContent:hover{
-background-color: #303030;
+background-color: #040041;
 }
 
 footer {
     width: 100%;
     height: 2.5rem;
 }
-
 footer a {
     color: white;
     text-decoration: none;
